# api/src/main/resources/webroot/api.yaml
@@ -21,3 +21,91 @@ paths:
       responses:
         200:
           description: "OK"
+          schema:
+            $ref: '#/definitions/ApiStatus'
+  /login:
+    post:
+      tags:
+        - "user"
+      summary: "Login as user"
+      description: ""
+      operationId: "loginUser"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Pet object that needs to be added to the store"
+          required: true
+          schema:
+            $ref: "#/definitions/LoginUser"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            $ref: '#/definitions/BearerToken'
+        400:
+          description: "Bad request"
+  /user:
+    post:
+      tags:
+        - "user"
+      summary: "Create new user"
+      description: ""
+      operationId: "createUser"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "Pet object that needs to be added to the store"
+          required: true
+          schema:
+            $ref: "#/definitions/NewUser"
+      produces:
+        - "application/json"
+      responses:
+        200:
+          description: "OK"
+          schema:
+            $ref: '#/definitions/User'
+        400:
+          description: "Bad request"
+definitions:
+  BearerToken:
+    type: "object"
+    properties:
+      token:
+        type: "string"
+  LoginUser:
+    type: "object"
+    properties:
+      email:
+        type: "string"
+      password:
+        type: "string"
+  NewUser:
+    type: "object"
+    properties:
+      firstName:
+        type: "string"
+      lastName:
+        type: "string"
+      email:
+        type: "string"
+      password:
+        type: "string"
+  User:
+    type: "object"
+    properties:
+      firstName:
+        type: "string"
+      lastName:
+        type: "string"
+      email:
+        type: "string"
+      disabled:
+        type: "boolean"
+  ApiStatus:
+    type: "object"
+    properties:
+      status:
+        type: "string"
